# fasthtml-demo

./: README.md  pyproject.toml
