[tool.poetry]
name = "fasthtml-demo"
version = "0.1.0"
description = "Testing out new library fasthtml"
authors = ["Mehul <fadnavismehul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-fasthtml = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
